# hanoi

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  hanoi.cabal  stack.yaml
src/HOA/: Format.hs  Printer.hs  Sanitizer.hs
src/HOA/Parser/: LabelExpr.hs
src/lib/: Hanoi.hs
src/lib/HOA/: Format.hs  Formula.hs  Parser.hs  Printer.hs  Sanitizer.hs  Utils.hs
src/lib/HOA/Parser/: AccCond.hs  AccName.hs  Body.hs  Data.hs  Header.hs  LabelExpr.hs  Properties.hs  Util.hs
src/lib/Spot/: Autfilt.hs  Randaut.hs
src/test/: HOAExamplesTest.hs  SpotBasedTest.hs  Test.hs
