name:                hanoi
version:             0.0.0.1
synopsis:            Library for automata and the HOA format
description:         Library for automata and the HOA format
author:              Felix Klein <Klein@ProjectJARVIS.de>
                     Philippe Heim <Heim@ProjectJARVIS.de>
                     Gideon Geier <Geier@ProjectJARVIS.de>
                     Marvin Stenger <Stenger@ProjectJARVIS.de>
maintainer:          Klein@ProjectJARVIS.de
category:            Automata
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: jarvisgit:libraries/hanoi

library

  ghc-options:
    -Wall -Wno-name-shadowing -fno-ignore-asserts

  build-depends:
      base >=4.7 && <4.13
    , containers >= 0.6.0.1
    , finite >= 1.4.1
    , sat >= 1.0.4.0
    , parsec


  exposed-modules:
    Hanoi

  other-modules:
    HOA.Format
    HOA.Parser
    HOA.Parser.Util
    HOA.Parser.Data
    HOA.Parser.Header
    HOA.Parser.Body
    HOA.Parser.LabelExpr
    HOA.Parser.AccCond
    HOA.Parser.AccName
    HOA.Parser.Properties
    HOA.Printer
    HOA.Sanitizer

  hs-source-dirs:
    src/lib

  default-language:
    Haskell2010
