name:                hanoi
version:             0.1.0.0
synopsis:            Library for automata and the HOA format
description:         A library for ω-regular automata and processing of files in HOA format
author:              Felix Klein <felix.klein@cispa.de>
                     Philippe Heim <philippe.heim@cispa.de>
                     Gideon Geier <gideon.geier@cispa.de>
                     Marvin Stenger <marvin.stenger@cispa.de>
maintainer:          Felix Klein <felix.klein@cispa.de>
                     Philippe Heim <philippe.heim@cispa.de>
                     Gideon Geier <gideon.geier@cispa.de>
                     Marvin Stenger <marvin.stenger@cispa.de>
license:             MIT
license-file:        LICENSE
category:            Automata
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/reactive-systems/hanoi

library

  ghc-options:
    -Wall -Wno-name-shadowing -fno-ignore-asserts

  build-depends:
      base >=4.7
    , containers >= 0.6.0.1 
    , finite >= 1.4.1
    , parsec


  exposed-modules:
    Hanoi

  other-modules:
    HOA.Format
    HOA.Formula
    HOA.Parser
    HOA.Parser.Util
    HOA.Parser.Data
    HOA.Parser.Header
    HOA.Parser.Body
    HOA.Parser.LabelExpr
    HOA.Parser.AccCond
    HOA.Parser.AccName
    HOA.Parser.Properties
    HOA.Printer
    HOA.Sanitizer
    HOA.Utils

  hs-source-dirs:
    src/lib

  default-language:
    Haskell2010


test-suite default

  type:
    detailed-0.9

  test-module:
    Test

  other-modules:
    SpotBasedTest
    HOAExamplesTest
    Hanoi
    HOA.Format
    HOA.Formula
    HOA.Parser
    HOA.Parser.Util
    HOA.Parser.Data
    HOA.Parser.Header
    HOA.Parser.Body
    HOA.Parser.LabelExpr
    HOA.Parser.AccCond
    HOA.Parser.AccName
    HOA.Parser.Properties
    HOA.Printer
    HOA.Sanitizer
    HOA.Utils

  hs-source-dirs:
    src/test
    src/lib

  ghc-options:
    -Wall -Wno-name-shadowing -fno-ignore-asserts

  build-depends:
      base >=4.7 && <4.15
    , containers >= 0.6.0.1 && <0.7
    , finite >= 1.4.1
    , automata-tools-wrappers
    , parsec
    , QuickCheck
    , Cabal >=2.4
    , hanoi
    , directory >= 1.3.3.0
    , process >= 1.6.5.0
    , temporary >= 1.3

  default-language:
    Haskell2010
